unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium

  * InputMonitor: add an unity class that monitors XInput2 events and
    converts them to XEvent
  * EdgeBarrierController: use InputMonitor to get the barrier events
    instead of relying on its implementation
  * DecorationsMenuLayout: use input monitor for menu scrubbing (LP:
    #1614597)
  * PanelView: use InputMonitor to track menu events
  * LockScreenPanel: use InputMonitor events instead of mouse polling
    for menu scrubbing
  * MenuManager: add support for mouse trackers with triangle algorithm
    support (LP: #1618405)
  * PanelView: scale gradient refinement properly
  * PanelService: don't allow to deactivate menus if they've been opened
    too shortly
  * LockScreenController: ignore icon_paths_changed signal in
    menumanager for Lockscreen

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 04 Jul 2017 18:12:47 +0200

unity (7.4.0+16.04.20160906-0ubuntu1) xenial; urgency=medium

  [ Marco Trevisan (Treviño) ]
  * SwitcherView: always disable animations when in lowgfx mode (LP:
    #1602784)

  [ Andrea Azzarone ]
  * When locked discard damages from windows below lockscreen. (LP:
    #1605180)
  * DecoratedWindow: display unmaximize button if the window is
    vertically or horizontally maximized (LP: #1608480)
  * Make sure the switcher detail view is properly scaled. Also scale
    the xy_offset to make sure the switcher and launcher do not overlap.
    (LP: #1605256)
  * Close session dialog on first ESC. (LP: #1521116)
  * Filter out scrolling envents for FilterExpanderLabel. (LP: #1604632)
  * Disable menu discovery animation if MenusDiscoveryDuration is 0.
    (LP: #942962)
  * Redraw fake decorations on window resize. (LP: #940470)
  * Use compiz::Window::serverNext instead of compiz::Window::next in
    IsWindowObscured as the latter can be outdated just after
    scale/spread terminates. (LP: #1614116)

  [ Marco Trevisan (Treviño) ]