@@ -32,7 +32,15 @@ namespace launcher
 class FileManagerLauncherIcon : public ApplicationLauncherIcon, public StorageLauncherIcon
 {
 public:
+  typedef nux::ObjectPtr<FileManagerLauncherIcon> Ptr;
+
   FileManagerLauncherIcon(ApplicationPtr const&, DeviceLauncherSection::Ptr const&, FileManager::Ptr const& = nullptr);
+
+  bool IsUserVisible() const override;
+
+protected:
+  WindowList WindowsOnViewport() override;
+  WindowList WindowsForMonitor(int monitor) override;
 
 private:
   WindowList GetManagedWindows() const override;
