@@ -36,7 +36,7 @@ void StorageLauncherIcon::UpdateStorageWindows()
   bool active = false;
   bool urgent = false;
   bool check_visibility = (GetIconType() == IconType::APPLICATION);
-  bool visible = IsSticky();
+  bool visible = false;
 
   managed_windows_ = GetStorageWindows();
   windows_connections_.Clear();
@@ -54,13 +54,8 @@ void StorageLauncherIcon::UpdateStorageWindows()
     if (!urgent && win->urgent())
       urgent = true;
 
-    if (check_visibility)
-    {
-      windows_connections_.Add(win->visible.changed.connect([this] (bool) { OnWindowStateChanged(); }));
-
-      if (!visible && win->visible())
-        visible = true;
-    }
+    if (check_visibility && !visible)
+      visible = true;
   }
 
   SetQuirk(Quirk::RUNNING, !managed_windows_.empty());
@@ -68,7 +63,7 @@ void StorageLauncherIcon::UpdateStorageWindows()
   SetQuirk(Quirk::URGENT, urgent);
 
   if (check_visibility)
-    SetQuirk(Quirk::VISIBLE, visible);
+    SetQuirk(Quirk::VISIBLE, visible || IsSticky());
 
   EnsureWindowsLocation();
 }
@@ -83,7 +78,7 @@ void StorageLauncherIcon::OnWindowStateChanged()
   bool active = false;
   bool urgent = false;
   bool check_visibility = (GetIconType() == IconType::APPLICATION);
-  bool visible = IsSticky();
+  bool visible = false;
 
   for (auto const& win : managed_windows_)
   {
@@ -93,7 +88,7 @@ void StorageLauncherIcon::OnWindowStateChanged()
     if (!urgent && win->urgent())
       urgent = true;
 
-    if (check_visibility && !visible && win->visible())
+    if (check_visibility && !visible)
       visible = true;
   }
 
@@ -101,7 +96,7 @@ void StorageLauncherIcon::OnWindowStateChanged()
   SetQuirk(Quirk::URGENT, urgent);
 
   if (check_visibility)
-    SetQuirk(Quirk::VISIBLE, visible);
+    SetQuirk(Quirk::VISIBLE, visible || IsSticky());
 }
 
 bool StorageLauncherIcon::OnShouldHighlightOnDrag(DndData const& dnd_data)
